Commencé implémenter jauge

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <textarea name="" id="a" cols="30" rows="10"></textarea>
+  <meter id="meter" min="0" max="200" value="a.value.length"></meter>
   <h2>Résultat :</h2>
   <div id="b"></div>
   <script src="app.js"></script>
