--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-  <textarea name="" id="a" cols="30" rows="10"></textarea>
-  <meter id="meter" min="0" max="200" value="a.value.length"></meter>
+  <textarea name="" id="editor" cols="30" rows="10"></textarea>
+  <p class="compteur"></p>
+  <meter id="meter" min="0" max="200"></meter>
   <h2>Résultat :</h2>
-  <div id="b"></div>
+  <div id="preview"></div>
   <script src="app.js"></script>
 </body>
 
