--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <textarea name="" id="editor" cols="30" rows="10"></textarea>
+  <input type="number" name="maxChars" id="maxChars" value="200">
   <p class="compteur"></p>
   <meter id="meter" min="0" max="200"></meter>
   <h2>Résultat :</h2>
