ajout texte compteur

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Editeur HTML et CSS </title>
 </head>
 
 <body>
+    <h1>Editeur HTML et CSS</h1>
   <textarea name="" id="editor" cols="30" rows="10"></textarea>
   <input type="number" name="maxChars" id="maxChars" value="200">
   <p class="compteur"></p>
