--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 
 <body>
   <h1>Éditeur HTML & CSS</h1>
-  <textarea class="editor" name="editor" id="editor" cols="30" rows="10"></textarea>
-
+  <textarea class="editor" name="editor" id="editor" cols="30"
+    rows="10"></textarea>
+  <meter class="chars-meter" max="200"></meter>
+  <p class="chars-count"></p>
+  <input type="number" name="max-chars-input" id="max-chars-input"
+    class="max-chars-input">
   <h2>Prévisualisation</h2>
   <div class="preview"></div>
 </body>
