Paramétrage couleur de la jauge

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <h1>Éditeur HTML & CSS</h1>
   <textarea class="editor" name="editor" id="editor" cols="30"
     rows="10"></textarea>
-  <meter class="chars-meter" max="200"></meter>
+  <meter class="chars-meter" min="0" optimum="50" low="100" high="160"
+    max="200"></meter>
   <p class="chars-count"></p>
   <input type="number" name="max-chars-input" id="max-chars-input"
     class="max-chars-input">
