--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Éditeur HTML & CSS</h1>
   <textarea class="editor" name="editor" id="editor" cols="30"
-    rows="10"></textarea>
+    rows="10"  maxlength="200"></textarea>
   <meter class="chars-meter" min="0" optimum="50" low="100" high="160"
     max="200"></meter>
   <p class="chars-count"></p>
