Implémenté boutons pour ajouter des tags dans l'éditeur

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <h1>Éditeur HTML & CSS</h1>
+  <input type="button" class="tag-btn" value="b">
+  <input type="button" class="tag-btn" value="i">
   <textarea class="editor" name="editor" id="editor" cols="30"
     rows="10"  maxlength="200"></textarea>
   <meter class="chars-meter" min="0" optimum="50" low="100" high="160"
